# bank

./: .env.example  .gitignore  ARCHITECTURE.md  COMPLETION_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  DEPLOY_TO_GITHUB_CLOUDFLARE.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  PROJECT_INFO.sh  QUICK_START_UK.md  README.md  README_RUST_INDEX.md  RUST_IMPLEMENTATION_GUIDE.md  RUST_QUICK_START.md  RUST_README.md  START.md  build.sh  deploy.sh  package-lock.json  package.json  run.sh  setup.sh  setup_rust.sh  verify_structure.sh  vite.config.js  wrangler.toml  wrangler.toml.rust
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: api.rs  data.rs  errors.rs  handlers.rs  main.rs  models.rs
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  main.rs  models.rs  storage.rs
frontend/src/components/: chart_viewer.rs  country_selector.rs  indicator_selector.rs  mod.rs
frontend/src/pages/: comparison_page.rs  favorites_page.rs  mod.rs  search_page.rs
public/: index.html
scripts/: publish_with_wrangler.sh  setup_github_and_secrets.sh
src/: App.jsx  index.css  main.jsx
src/components/: Comparison.jsx  CountrySelector.jsx  DataVisualization.jsx  Favorites.jsx  IndicatorSelector.jsx
src/utils/: api.js
worker/: index.js
